# TimeTrackButton

./: .gitignore  CLERK_INSTALL.md  HOMEBREW_SETUP.md  INSTALL.md  README.md  RELEASE_NOTES.md  build_windows.py  create_distributions.py  example_sketchybarrc  floating_button.py  floating_button_windows.py  install.sh  install_dependencies.sh  install_for_clerk.sh  requirements.txt  sketchybar_time_tracker.sh  sketchybarrc  test_qt.cpp  time_entries.csv  timetrack.db
cpp_app/: CMakeLists.txt  build_cpp.sh  build_static.sh  build_universal.sh  bundle_complete_qt.sh  bundle_minimal_qt.sh  bundle_simple_qt.sh  main.cpp
cpp_app/Time Tracker.app/Contents/MacOS/: TimeTracker
cpp_app/TimeTracker_CPP.app/Contents/Libraries/: libQtMultimedia.dylib  libQtNetwork.dylib  libQtSql.dylib  libbrotlicommon.1.dylib  libbrotlidec.1.dylib  libdbus-1.3.dylib  libdouble-conversion.3.dylib  libfreetype.6.dylib  libglib-2.0.0.dylib  libicui18n.77.dylib  libpcre2-16.0.dylib  libzstd.1.dylib
cpp_app/TimeTracker_CPP.app/Contents/MacOS/: TimeTracker
cpp_app/TimeTracker_CPP.app/Contents/Resources/: qt.conf
cpp_app/TimeTracker_CPP.app/Contents/_CodeSignature/: CodeResources
cpp_app/TimeTracker_Universal.app/Contents/Frameworks/: libb2.1.dylib  (+28 more)
cpp_app/build_cpp/: CMakeCache.txt
cpp_app/build_cpp/.qt/: QtDeploySupport.cmake
cpp_app/build_cpp/TimeTracker_autogen/: deps  moc_predefs.h
cpp_app/build_universal/: CMakeCache.txt  cmake_install.cmake
cpp_app/build_universal/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cpp_app/build_universal/TimeTracker_autogen/: deps
(+174 files in other folders)
